syntax = "proto3"; 

package blog; 

message Blog {
	string id = 1; 
	string author_id = 2;
	string title = 3; 
	string content = 4;
}

message CreateBlogRequest {
	Blog blog = 1; // won't contain an id
}

message CreateBlogResponse {
	Blog blog = 1; // will contain an id
}

service BlogService {
	rpc CreateBlog (CreateBlogRequest) returns (CreateBlogResponse){}
}